get core building in isolation

--- a/libs/cm0_sync/Cargo.toml
+++ b/libs/cm0_sync/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 authors = ["Daniel Seitz <dnseitz@gmail.com>"]
 
 [target.thumbv6m-none-eabi.dependencies]
-cm0_atomic = { path = "../cm0_atomic" }
+cm0_atomic = { git = "https://github.com/AltOS-Rust/cm0-atomic" }
